FullQa New/src/Zuora Quotes/objects/QuoteChargeSummary__c.object
<CustomObject>
    <fields>
        <fullName>Apply_Discount_To_One_Time_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To One Time Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Discount_To_Recurring_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Recurring Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Discount_To_Usage_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeLog__c</fullName>
        <description>The text describing the change of Amendment or Renewal</description>
        <inlineHelpText>The text describing the change of Amendment or Renewal</inlineHelpText>
        <label>Change Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description field of Product Rate Plan Charge in product catalog</description>
        <inlineHelpText>Description field of Product Rate Plan Charge in product catalog</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Level__c</fullName>
        <label>Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RatePlan</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount of the charge price</description>
        <inlineHelpText>Discount of the charge price</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EffectivePrice__c</fullName>
        <description>The effective price of this charge</description>
        <inlineHelpText>The effective price of this charge</inlineHelpText>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncludedUnits__c</fullName>
        <description>The included units of this charge</description>
        <inlineHelpText>The included units of this charge</inlineHelpText>
        <label>Included Units</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <description>List price field of Product Rate Plan Charge in product catalog</description>
        <inlineHelpText>List price field of Product Rate Plan Charge in product catalog</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ListTotal__c</fullName>
        <description>The list total price for the charge</description>
        <inlineHelpText>The list total price for the charge</inlineHelpText>
        <label>List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <description>Monthly Recurring Revenue of this charge</description>
        <inlineHelpText>Monthly Recurring Revenue of this charge</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model field of Product Rate Plan Charge in product catalog</description>
        <inlineHelpText>Model field of Product Rate Plan Charge in product catalog</inlineHelpText>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quote Charge Summarys</relationshipLabel>
        <relationshipName>Quote_Charge_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <description>Period of this charge</description>
        <inlineHelpText>Period of this charge</inlineHelpText>
        <label>Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>QuoteRatePlan__r.QuoteProductName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Name__c</fullName>
        <formula>QuoteRatePlan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Rate Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Rate Plan Charge</label>
        <referenceTo>QuoteRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Charge Summarys</relationshipLabel>
        <relationshipName>Quote_Charge_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteRatePlan__c</fullName>
        <description>The Quote rateplan this charge belongs to</description>
        <inlineHelpText>The Quote rateplan this charge belongs to</inlineHelpText>
        <label>Quote Rate Plan</label>
        <referenceTo>QuoteRatePlan__c</referenceTo>
        <relationshipLabel>Quote Charge Summarys</relationshipLabel>
        <relationshipName>QuoteChargeSummarys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Charge</label>
        <referenceTo>QuoteCharge__c</referenceTo>
        <relationshipLabel>Quote Charge Summarys</relationshipLabel>
        <relationshipName>Quote_Charge_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <description>Total Contact Value of this charge</description>
        <inlineHelpText>Total Contact Value of this charge</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <description>Total price of this charge</description>
        <inlineHelpText>Total price of this charge</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upto_How_Many_Periods__c</fullName>
        <label>Upto How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Charge Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Quote_Charge__c</columns>
        <columns>QuoteRatePlan__c</columns>
        <columns>QuoteRatePlanCharge__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Charge Summarys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>